--- a/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
+++ b/www.nass.gov.ng/e23f0526dcfc236a7cf6cef56334d431deff7fb3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 18:37:10 GMT
+    - Mon, 26 Mar 2018 16:10:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VytbeyvUzFlkLno8FU4y10; path=/
+    - PHPSESSID=-2cFevJN%2CHbh%2CJSI9oqB%2C3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 18:37:10 GMT
+recorded_at: Mon, 26 Mar 2018 16:10:22 GMT
