--- a/www.nass.gov.ng/1aabcb6bdc9a4bfd289d79419c529428784fa467.yml
+++ b/www.nass.gov.ng/1aabcb6bdc9a4bfd289d79419c529428784fa467.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 18:53:58 GMT
+    - Mon, 26 Mar 2018 16:27:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MIhsoqzH4GZfT7GrGgjJz1; path=/
+    - PHPSESSID=wZ%2CZrk4zV31XF5RlXCddt2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 18:53:58 GMT
+recorded_at: Mon, 26 Mar 2018 16:27:54 GMT
