--- a/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
+++ b/www.nass.gov.ng/ecaeb1c0a4881e8724d62b7d9dc85139fb441f6b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 18:55:19 GMT
+    - Mon, 26 Mar 2018 16:29:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=c5LgIH-942AGymmC4dJ1e1; path=/
+    - PHPSESSID=foG56YotI%2CKu%2CWTmDkECX0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 18:55:20 GMT
+recorded_at: Mon, 26 Mar 2018 16:29:03 GMT
