--- a/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
+++ b/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 19:42:52 GMT
+    - Mon, 26 Mar 2018 17:14:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mjorZorWPppTjQxn05zup2; path=/
+    - PHPSESSID=JGQc9w6BFfE%2CNNo47YO6V2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 19:42:52 GMT
+recorded_at: Mon, 26 Mar 2018 17:14:52 GMT
