--- a/www.nass.gov.ng/d3b943a4d3b94053e58f0ec9f2bcacdbe7e2eb32.yml
+++ b/www.nass.gov.ng/d3b943a4d3b94053e58f0ec9f2bcacdbe7e2eb32.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 25 Mar 2018 19:43:23 GMT
+    - Mon, 26 Mar 2018 17:15:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bELjU2NycWYfKyKS-w0Fu1; path=/
+    - PHPSESSID=DIo%2CkMMUtEBNvAz%2CyDe362; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 25 Mar 2018 19:43:23 GMT
+recorded_at: Mon, 26 Mar 2018 17:15:18 GMT
